# IsoOctree

./: .gitignore  CMakeLists.txt  IsoOctree.sln  IsoOctree.vcproj  LICENSE  NOTICE  README.md  build_and_test_python_library.sh  build_library_and_example.sh
.github/workflows/: build.yml
SRC/: CmdLineParser.cpp  CmdLineParser.h  Geometry.h  Geometry.inl  IsoOctree.h  IsoOctree.inl  MAT.inl  Main.cpp  MarchingCubes.h  MarchingCubes.inl  Octree.inl  Ply.h  Ply.inl  VertexData.h  VertexData.inl  ZOrderOctree.hpp  api.cpp  api.hpp  example.cpp  hash_map  logging.hpp
cmake/: IsoOctreeConfig.cmake
example/: CMakeLists.txt  main.cpp
include/IsoOctree/: IsoOctree.hpp
python/: CMakeLists.txt  README.rst  bindings.cpp  example.py  setup.py
python/examples/: cayley.py  point_cloud.py  simple.py
